# entity-browser-rust

./: .gitignore  AGENTS.md  CANONICAL-DOCS.toml  Cargo.toml  Dockerfile  Makefile  README.md  Trunk.toml  build.rs  index.html  recovery-preview.html
.cargo/: config.toml
assets/: entity-worker-loader.js  sw.js
docs/architecture/: WORKER-MODE-LIVING-DOC.md
docs/architecture/guides/: DESIGN-PRINCIPLES.md  DEVELOPER-GUIDE.md  GUIDE-DEPLOYMENT-AND-CONFIGURATION.md  PUBLISH-INGEST-FORMAT.md  SHELL.md  TOOLS.md
docs/architecture/reviews/: BUILD-FLOW-REVIEW.md  MODEL-PEER-LIFECYCLE-AND-STARTUP.md  PEER-SDK-ARM-ARCHITECTURE-REVIEW.md  PERF-ANALYSIS.md
docs/architecture/specs/: DISCIPLINE-REFRAME-BROWSER-SUBSTRATE.md  DOCTRINES-BROWSER-SUBSTRATE.md  ENTITY-APP-FRAMEWORK.md  ENTITY-SDK-API.md  ENTITY-TREE-REFACTOR-DESIGN.md  IMPLEMENTATION-ARCHITECTURE.md  MODEL-BROWSER-WASM-RUNTIME.md  PROJECT-ARCHITECTURE.md  REFERENCE-CONTENT-SITE-APP.md  REFERENCE-ENTITY-JS-APPS-PLATFORM.md  REFERENCE-PUBLISHING-PIPELINE.md  REFERENCE-THEMING.md  SYSTEM-VISION.md  WINDOW-ARCHITECTURE.md
docs/status/: STATUS.md
src/: action.rs  action_event.rs  app.rs  app_paths.rs  boot.rs  boot_fast_paint.rs  capabilities.rs  chain_trace_cache.rs  connections.rs  deployment_config.rs  diagnostics.rs  event_log_cache.rs  event_log_writer.rs  format.rs  frame_counters.rs  inspect_router.rs  listener_state.rs  main.rs  multitab.rs  opfs_cleanup.rs  peer_display.rs  peer_mode.rs  peer_registry.rs  peers.rs  peers_worker.rs  persistence.rs  render_policy.rs  roster.rs  selection.rs  selection_source.rs  session_config.rs  storage_durability.rs  tauri_ipc.rs  theme_tokens.rs  tree_click.rs  vault_codec.rs  watchdog.rs  watchdog_policy.rs  window.rs  window_registry.rs  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  persistence.rs
src/apps/: format.rs  ingest.rs  mod.rs  paths.rs  read.rs  save_retention.rs
src/content_site/: cache.rs  discovery.rs  embed.rs  format.rs  http_poll.rs  ingest.rs  location.rs  mod.rs  origins.rs  paths.rs  prefs.rs  publish.rs  publish_fixture.rs  read.rs  render.rs  resolver.rs  static_export.rs
src/dom/: chain_trace.rs  content_site.rs  content_stream.rs  entity_tree.rs  event_log.rs  execute_console.rs  games.rs  key_manager.rs  knowledge_base.rs  mod.rs  path_tap.rs  peer_connections.rs  peer_management.rs  query_console.rs  scanner.rs  settings.rs  shell.rs  site_directory.rs  site_editor.rs  site_overlay.rs  storage.rs  style.rs  theme.rs  util.rs  wire_recorder.rs
src/ops/: execute.rs  mod.rs
src/views/: mod.rs
src/views/chain_trace/: mod.rs  model.rs  output.rs
src/views/content_site/: mod.rs  model.rs  output.rs
src/views/content_stream/: mod.rs  model.rs  output.rs
src/views/entity_tree/: mod.rs  model.rs  output.rs  tree.rs
src/views/event_log/: mod.rs  model.rs  output.rs
src/views/execute_console/: mod.rs  model.rs  output.rs
src/views/games/: mod.rs
src/views/games/fixtures/: calculator.html  war.html
src/views/key_manager/: mod.rs  model.rs  output.rs
src/views/knowledge_base/: ingest.rs  mod.rs  model.rs  output.rs
src/views/path_tap/: mod.rs  model.rs  output.rs
src/views/peer_connections/: mod.rs  model.rs  output.rs
src/views/peer_management/: mod.rs  model.rs  output.rs
src/views/query_console/: mod.rs  model.rs  output.rs
src/views/settings/: mod.rs  model.rs  output.rs
src/views/shell/: binding.rs  mod.rs  model.rs  output.rs
src/views/site_editor/: mod.rs  model.rs  output.rs  validate.rs
src/views/storage/: mod.rs  model.rs  output.rs
src/views/wire_recorder/: mod.rs  model.rs  output.rs
tests/: e2e_worker.rs  escape_hatch_budget.rs  inspectability_e2e.rs  inspectability_validation.rs  peer_integration.rs  sdk_consumer_validation.rs  shell_verb_validation.rs
tools/: check-dist.sh
tools/e2e/: README.md
tools/phase-0a-opfs-probe/: README.md  index.html  worker.js
